# soci-minimal-reproduction

./: CMakeLists.txt  README.md  cmake-variants.yaml
cmake/: config_submods.cmake
src/: CMakeLists.txt  main.cpp
